--- a/index.html
+++ b/index.html
@@ -1,5 +1,38 @@
+<!DOCTYPE html>
 <html>
+
+<head>
+  <meta charset='utf-8'>
+  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+  <title>Welcome To My Page</title>
+  <meta name='viewport' content='width=device-width, initial-scale=1'>
+  <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+  <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
+</head>
+
+
 <body>
-  <h1>Hello World</h1>
+  <div id="header">
+    <header>
+      <img src="images/logo.png" class="logo">
+      <nav>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+  </div>
+  <div id="home">
+    <img src="images/background.jpg" style="width: 100%;height: 130%;position: absolute;z-index: -1;">
+    <h1>Hello,</h1>
+    <h2>My name is Rama</h2>
+  </div>
+  <div id="about">
+    test
+  </div>
 </body>
+
 </html>
