--- a/index.html
+++ b/index.html
@@ -25,14 +25,47 @@
       </nav>
     </header>
   </div>
+  
   <div id="home">
     <img src="images/background.jpg" style="width: 100%;height: 130%;position: absolute;z-index: -1;">
     <h1>Hello,</h1>
     <h2>My name is Rama</h2>
   </div>
+  
+  
   <div id="about">
-    test
+    <div id="bungkus-about">
+      <img src="images/hacktiv8.png" style="width: 300px;">
+      <h2>Bahasa Pemrograman</h2>
+      <p>yang saya pelajari selama Phase 0 berlangsung</p>
+      <div class="pelajaran-bungkus">
+        <div class="pelajaran">
+          <img src="https://usefulangle.com/img/thumb/javascript.png" style="width: 300px;">
+          <h1>javascript</h1>
+        </div>
+        <div class="pelajaran">
+          <img
+            src="https://2.bp.blogspot.com/--x4o4ysE-g4/WAXlEOQdY3I/AAAAAAAAABU/Yxz3UJ9Un4AyxHhuHrVj1hEbjW-y125nACLcB/s320/hateemel5.png"
+            style="width: 300px;">
+          <h1>HTML</h1>
+        </div>
+        <div class="pelajaran">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/3/3c/CSS_text_representation_%28square%29.png"
+            style="width: 300px;">
+          <h1>CSS</h1>
+        </div>
+      </div>
+    </div>
   </div>
+
+  <div id="contact">
+    <h1>Contact Me,</h1>
+    <div id="socialmedia">
+     <a href="http://instagram.com/ramaardanaa"><img src="https://images.vexels.com/media/users/3/137201/isolated/preview/83b5f2a86fa0ec9f938664da94a9bc55-instagram-silhouette-stroke-logo-by-vexels.png"></a>
+     <a href="http://github.com/ramaardanaa"><img style="width: 450px;" src="https://pngimg.com/uploads/github/github_PNG15.png"></a> 
+    </div>
+  </div>
+
 </body>
 
 </html>
