--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
       </nav>
     </header>
   </div>
-  
+
   <div id="home">
     <img src="images/background.jpg" style="width: 100%;height: 130%;position: absolute;z-index: -1;">
     <h1>Hello,</h1>
     <h2>My name is Rama</h2>
   </div>
-  
-  
+
+
   <div id="about">
     <div id="bungkus-about">
       <img src="images/hacktiv8.png" style="width: 300px;">
@@ -61,8 +61,9 @@
   <div id="contact">
     <h1>Contact Me,</h1>
     <div id="socialmedia">
-     <a href="http://instagram.com/ramaardanaa"><img src="https://images.vexels.com/media/users/3/137201/isolated/preview/83b5f2a86fa0ec9f938664da94a9bc55-instagram-silhouette-stroke-logo-by-vexels.png"></a>
-     <a href="http://github.com/ramaardanaa"><img style="width: 450px;" src="https://pngimg.com/uploads/github/github_PNG15.png"></a> 
+      <a href="http://instagram.com/ramaardanaa"><img
+          src="https://images.vexels.com/media/users/3/137201/isolated/preview/83b5f2a86fa0ec9f938664da94a9bc55-instagram-silhouette-stroke-logo-by-vexels.png" /></a>
+      <a href="http://github.com/ramaardanaa"><img style="width: 450px;"  src="https://pngimg.com/uploads/github/github_PNG15.png"/></a>
     </div>
   </div>
 
